pieces no longer overlap and game ends properly

--- a/css/style.css
+++ b/css/style.css
@@ -78,13 +78,13 @@ header{
 }
 
 .heads, .orange{
-    background-color: darkorange;
+    background-color: orange;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 60px;
 }
 
 .tails, .pink{
-    background-color: hotpink;
+    background-color: pink;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 60px;
 }
